--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>Toy Tale</title>
-    <script type="text/javascript" src="src/index.js"></script>
+    <script defer type="text/javascript" src="src/index.js"></script>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div id="toy-header">
+    <div id="toy-header"> 
       <img
         src="https://fontmeme.com/permalink/180719/67429e6afec53d21d64643101c43f029.png"
         alt="toy-header"
@@ -46,6 +46,9 @@
       Andy needs your help! <button id="new-toy-btn">Add a new toy!</button>
     </p>
 
-    <div id="toy-collection"></div>
+    <div id="toy-collection">
+
+
+    </div>
   </body>
 </html>
