--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Toy Tale</title>
     <script type="text/javascript" src="src/index.js"></script>
+    <!-- <script type="text/javascript" src="src/challenge-test.js"></script> -->
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
